--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 dist: trusty
 before_install:
+- curl -X POST -F token=ecf023c0c3e22b3988d8f6491f8335 -F ref=source https://gitlab.com/api/v4/projects/2995059/trigger/pipeline
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-full biber latexmk make texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
 script:
 - latexmk -pdf Tesi.tex
